@@ -26,5 +26,6 @@
 #define GCERR_INVALID_SENTENCE_STARTER 5
 #define GCERR_WRITE_FIRST_LOWERCASE 6
 #define GCERR_WRITE_FIRST_UPPERCASE 7
+#define GCERR_REPEATING_WORD 8
 
 #endif
